	- GetNeighboringRooms(int GridIndex, RoomShape, int Dimension = -1)
		Returns a table map of DoorSlot->RoomDescriptor. Don't use ipairs!
		Can be used to determine the neighbors of a room before even placing it.
		Note that this does not give you any signal of if a room would actually fit, or if the neighbors would even allow a connection.
* RoomDescriptor
	- GetDimension() - int
	- GetNeighboringRooms()
		Returns a table map of DoorSlot->RoomDescriptor. Don't use ipairs!
* ItemConfigCard:
	- Added weight and hidden parameter to cards, both can be specified in pocketitems.xml
	- Added the ability to specify a custom "availability condition" to evaluate when the game checks if a card is available.
	- Hidden
	- InitialWeight
	- Weight - can be modified
	- GetAvailabilityCondition()
	- SetAvailabilityCondition(function)
	- ClearAvailabilityCondition()
* Sprite:
	- SetOverlayLayerFrame(int Layer, int Frame) - SetLayerFrame for overlays
	- GetLayerFrameData(int Layer) - Returns the current AnimationFrame for the given layer.
	- GetOverlayLayerFrameData(int Layer) - Same as above for the overlay animation.
* AnimationFrame:
	- GetStartFrame()
	- GetEndFrame()
* Point:
	- [Get/Set]Color() - Allows setting a color per-Point; colors are lerped between points
	- [Get/Set]IsWorldSpace() - Automatically converts this Point's position from worldspace to screenspace when rendering
/newline/
Modified:
* Beam:
	- Beams now have an inherent Sprite object, no longer prone to losing its Sprite reference
	- Changes made to the Sprite provided in the constructor will not be reflected in the Beam, and vis-versa
	- Wrap[S/T]Mode are automatically set to proper values for the spritesheet to loop vertically
Fixes:
	- 
/newline/
v1.0.11c -
Additions:
* CharacterMenu:
	- [Get/Set]ActiveStatus()
	- CharacterMenuStatus enum
/newline/
Fixes:
	- Fixed vanilla game crash caused by Hornfel trying to enter new door after losing minecart.
	- Fixed SetRail index checks
/newline/
v1.0.11b -