@@ -1,0 +1,4 @@
+struct LRoomTileDesc depends (XY) {
+	XY _high[2] : 0x0;
+	XY _low[2] : 0x10;
+} : 0x20;
